# systemctl-mcp-server

./: pyproject.toml
src/systemctl_mcp_server/: client.py  server.py
